Refactoring complex code